# CSCI-E-83

./: .gitignore  pyproject.toml
Notebooks/: 03-Chapter3_ExploratoryDataAnalysis.ipynb  07_Chapter7_CommonProbabilityDistributions.ipynb  10_Chapter10_SimulationAsARoadToInsight.ipynb  11_Chapter11_ParameterEstiamtionAndMaximumLikelihood.ipynb  12-Chapter12_WHyInferenceIsImportant.ipynb  14-Chapter14_ResamplingMethods.ipynb  18_Chapter18_BayesianModels.ipynb  19_Chapter19_LinearModels.ipynb  21_Chapter21_ParametricBootstrap.ipynb  22_Chapter22_GeneralizedLinearModels.ipynb  24-Chapter24_Regularization.ipynb  25_Chapter25_ModelsForMessyData.ipynb  29_Chapter29_BayesianMCMC.ipynb  32_Chapter32_PropertiesOfTimeSeries.ipynb  33_Chapter33_TimeSeriesModels.ipynb
OldMaterial/Lesson13/: 29_BayesMCMC.ipynb
Project/: BTC_the_new_gold.ipynb  Proposal.ipynb  Woehammer_Analysis.ipynb
