[tool.poetry]
name = "csci-e-83"
version = "0.1.0"
description = ""
authors = ["Bill Henderson <wih730@g.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
