[tool.poetry]
name = "csci-e-83"
version = "0.1.0"
description = ""
authors = ["Bill Henderson <wih730@g.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.1.3"
polars = "^1.14.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
